# DRFProject

./: .coverage  .env sample  pyproject.toml
config/: celery.py  settings.py  urls.py
materials/: admin.py  models.py  paginators.py  permissions.py  serializers.py  tasks.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_alter_course_options_alter_lesson_options_and_more.py  0003_course_owner_lesson_owner.py  0004_subscription.py  0005_course_price.py  0006_alter_course_price.py  0007_course_updated_at.py
materials/tests/: test_views.py
payments/: models.py  tasks.py  urls.py  views.py
payments/migrations/: 0001_initial.py  0002_alter_payment_stripe_payment_url.py
payments/services/: stripe_service.py
users/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/fixtures/: groups.json  payments.json
users/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_managers_and_more.py  0003_payment.py
